--- a/environment/qa4sm_env.yml
+++ b/environment/qa4sm_env.yml
@@ -166,7 +166,7 @@ dependencies:
     - pytest-cov==2.10.1
     - pytest-django==4.1.0
     - pytest-mpl==0.12
-    - git+https://github.com/pstradio/qa4sm-reader.git@validation_comparison
+    - git+https://github.com/pstradio/qa4sm-reader.git@validation_comparison_optimized
     - redis==3.5.3
     - repurpose==0.8
     - seaborn==0.11.0
