--- a/UI/package.json
+++ b/UI/package.json
@@ -31,6 +31,7 @@
     "@types/jquery": "^3.5.5",
     "@types/ol": "^6.4.2",
     "@types/proj4": "^2.5.0",
+    "angular-gallery": "^1.0.2",
     "angular2-uuid": "^1.1.1",
     "bootstrap": "^4.6.0",
     "file-saver": "^2.0.5",
@@ -51,7 +52,7 @@
     "zone.js": "^0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1101.4",
+    "@angular-devkit/build-angular": "^0.1102.12",
     "@angular/cli": "~11.1.4",
     "@angular/compiler-cli": "~11.1.2",
     "@angular/localize": "^11.1.2",
