--- a/UI/package.json
+++ b/UI/package.json
@@ -57,7 +57,7 @@
     "zone.js": "^0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1101.4",
+    "@angular-devkit/build-angular": "^0.1102.12",
     "@angular/cli": "~11.1.4",
     "@angular/compiler-cli": "~11.1.2",
     "@angular/localize": "^11.1.2",
