--- a/environment/qa4sm_env.yml
+++ b/environment/qa4sm_env.yml
@@ -162,7 +162,7 @@ dependencies:
     - pygeobase==0.4.0
     - pygeogrids==0.3.0
     - pynetcf==0.2.2
-    - pytesmo==0.10.0
+    - git+https://github.com/pstradio/pytesmo.git@data_averager_issue-106
     - pytest-cov==2.10.1
     - pytest-django==4.1.0
     - pytest-mpl==0.12
