--- a/environment/qa4sm_env.yml
+++ b/environment/qa4sm_env.yml
@@ -149,7 +149,7 @@ dependencies:
     - esa-cci-sm==0.1.1
     - gldas==0.6.1
     - h5py==3.1.0
-    - git+https://github.com/awst-austria/ismn.git
+    - ismn==1.0.1
     - kombu==4.6.11
     - llvmlite==0.34.0
     - lxml==4.6.1
