--- a/environment/qa4sm_env.yml
+++ b/environment/qa4sm_env.yml
@@ -139,20 +139,28 @@ dependencies:
     - cftime==1.3.0
     - colorcet==2.0.2
     - configparser==5.0.1
+    - coreapi==2.3.3
+    - coreschema==0.0.4
     - coverage==5.3
     - datedown==0.3
     - django-countries==6.1.3
     - django-widget-tweaks==1.4.8
+    - djangorestframework==3.12.2
+    - drf-yasg==1.20.0
     - ease-grid==0.2
     - ecmwf-api-client==1.6.0
     - ecmwf-models==0.7
     - esa-cci-sm==0.1.1
     - gldas==0.6.1
     - h5py==3.1.0
+    - inflection==0.5.1
     - ismn==1.0.1
+    - itypes==1.2.0
+    - jinja2==3.0.1
     - kombu==4.6.11
     - llvmlite==0.34.0
     - lxml==4.6.1
+    - markupsafe==2.0.1
     - netcdf4==1.5.4
     - numba==0.51.2
     - param==1.10.0
@@ -169,6 +177,8 @@ dependencies:
     - qa4sm-reader==0.4.4.2
     - redis==3.5.3
     - repurpose==0.8
+    - ruamel-yaml==0.17.10
+    - ruamel-yaml-clib==0.2.6
     - seaborn==0.11.0
     - shapely==1.7.1
     - smap-io==0.4
@@ -176,7 +186,5 @@ dependencies:
     - smos==0.2
     - tqdm==4.52.0
     - trollsift==0.2.1
-    - vine==1.3.0
-    - djangorestframework==3.12.2
     - uritemplate==3.0.1
-    - drf-yasg==1.20.0
+    - vine==1.3.0
