--- a/environment/qa4sm_env.yml
+++ b/environment/qa4sm_env.yml
@@ -189,4 +189,4 @@ dependencies:
     - trollsift==0.2.1
     - uritemplate==3.0.1
     - vine==1.3.0
-    - git+https://github.com/awst-austria/qa4sm-preprocessing@master
+    - qa4sm-preprocessing==0.0.1
