--- a/environment/qa4sm_env.yml
+++ b/environment/qa4sm_env.yml
@@ -10,12 +10,16 @@ dependencies:
   - attrs=21.2.0
   - backports=1.0
   - backports.functools_lru_cache=1.6.4
+  - brotlipy=0.7.0
   - bzip2=1.0.8
   - c-ares=1.17.2
-  - ca-certificates=2021.5.30
+  - ca-certificates=2021.7.5
   - cartopy=0.19.0.post1
   - certifi=2021.5.30
+  - cffi=1.14.6
+  - chardet=4.0.0
   - configobj=5.0.6
+  - cryptography=3.4.7
   - curl=7.78.0
   - cycler=0.10.0
   - cython=0.29.24
@@ -101,8 +105,10 @@ dependencies:
   - proj=7.2.0
   - pthread-stubs=0.4
   - py=1.10.0
+  - pycparser=2.20
   - pygrib=2.1.3
   - pykdtree=1.3.4
+  - pyopenssl=20.0.1
   - pyparsing=2.4.7
   - pyproj=3.0.1
   - pyqt=5.12.3
@@ -112,22 +118,25 @@ dependencies:
   - pyqtwebengine=5.12.1
   - pyresample=1.21.0
   - pyshp=2.1.3
+  - pysocks=1.7.1
   - pytest=5.4.3
   - python=3.6.13
   - python-dateutil=2.8.2
   - python_abi=3.6
-  - pytz=2021.1
+  - pytz=2020.5
   - pyyaml=5.4.1
   - qt=5.12.9
   - readline=8.1
   - scipy=1.5.3
   - setuptools=57.4.0
+  - shapely=1.7.1
   - six=1.16.0
   - sqlite=3.36.0
   - sqlparse=0.4.1
   - tk=8.6.11
   - tornado=6.1
   - typing_extensions=3.10.0.0
+  - urllib3=1.26.6
   - wcwidth=0.2.5
   - wheel=0.37.0
   - xarray=0.18.2
@@ -151,10 +160,14 @@ dependencies:
     - charset-normalizer==2.0.4
     - colorcet==2.0.6
     - configparser==5.0.2
+    - coreapi==2.3.3
+    - coreschema==0.0.4
     - coverage==5.5
     - datedown==0.3
     - django-countries==7.2.1
     - django-widget-tweaks==1.4.8
+    - djangorestframework==3.12.4
+    - drf-yasg==1.20.0
     - ease-grid==0.2
     - ecmwf-api-client==1.6.1
     - ecmwf-models==0.7
@@ -162,10 +175,14 @@ dependencies:
     - gldas==0.6.1
     - h5py==3.1.0
     - idna==3.2
+    - inflection==0.5.1
     - ismn==1.1.0
+    - itypes==1.2.0
+    - jinja2==3.0.1
     - kombu==4.6.11
     - llvmlite==0.36.0
     - lxml==4.6.3
+    - markupsafe==2.0.1
     - netcdf4==1.5.7
     - numba==0.53.1
     - param==1.11.1
@@ -183,13 +200,14 @@ dependencies:
     - redis==3.5.3
     - repurpose==0.8
     - requests==2.26.0
+    - ruamel-yaml==0.17.16
+    - ruamel-yaml-clib==0.2.6
     - seaborn==0.11.2
-    - shapely==1.7.1
     - smap-io==0.4
     - smecv-grid==0.2.1
     - smos==0.2
     - toml==0.10.2
     - tqdm==4.62.2
     - trollsift==0.2.1
-    - urllib3==1.26.6
+    - uritemplate==3.0.1
     - vine==1.3.0
