--- a/environment/qa4sm_env.yml
+++ b/environment/qa4sm_env.yml
@@ -173,6 +173,7 @@ dependencies:
     - ecmwf-models==0.7
     - esa-cci-sm==0.1.1
     - gldas==0.6.1
+    - h5netcdf==0.11.0
     - h5py==3.1.0
     - idna==3.2
     - inflection==0.5.1
