--- a/environment/qa4sm_env.yml
+++ b/environment/qa4sm_env.yml
@@ -5,188 +5,240 @@ channels:
 dependencies:
   - _libgcc_mutex=0.1
   - _openmp_mutex=4.5
-  - asgiref=3.2.10
-  - attrs=20.3.0
+  - alsa-lib=1.2.3
+  - asgiref=3.3.4
+  - attrs=21.2.0
   - backports=1.0
-  - backports.functools_lru_cache=1.6.1
+  - backports.functools_lru_cache=1.6.4
+  - bokeh=2.3.3
   - brotlipy=0.7.0
   - bzip2=1.0.8
-  - c-ares=1.16.1
-  - ca-certificates=2020.11.8
-  - cartopy=0.18.0
-  - certifi=2020.11.8
+  - c-ares=1.17.2
+  - ca-certificates=2021.5.30
+  - cartopy=0.19.0.post1
+  - certifi=2021.5.30
   - cffi=1.14.3
   - chardet=3.0.4
+  - click=7.1.2
+  - cloudpickle=2.0.0
   - configobj=5.0.6
+  - contextvars=2.4
   - cryptography=3.2.1
-  - curl=7.71.1
+  - curl=7.78.0
   - cycler=0.10.0
-  - cython=0.29.21
+  - cython=0.29.24
+  - cytoolz=0.11.0
+  - dask=2021.3.0
+  - dask-core=2021.3.0
   - dbus=1.13.6
+  - distributed=2021.3.0
   - django=3.1.3
-  - eccodes=2.19.1
-  - expat=2.2.9
+  - eccodes=2.22.1
+  - expat=2.4.1
   - fontconfig=2.13.1
   - freetype=2.10.4
-  - geos=3.8.0
+  - fsspec=2021.8.1
+  - geos=3.9.1
   - gettext=0.19.8.1
-  - glib=2.66.2
-  - gst-plugins-base=1.14.5
-  - gstreamer=1.14.5
-  - hdf4=4.2.13
+  - glib=2.68.4
+  - glib-tools=2.68.4
+  - gst-plugins-base=1.18.5
+  - gstreamer=1.18.5
+  - hdf4=4.2.15
   - hdf5=1.10.6
-  - icu=64.2
-  - idna=2.10
-  - importlib-metadata=2.0.0
-  - importlib_metadata=2.0.0
+  - heapdict=1.0.1
+  - icu=68.1
+  - immutables=0.16
+  - importlib-metadata=4.8.1
+  - importlib_metadata=4.8.1
   - jasper=1.900.1
+  - jbig=2.1
+  - jinja2=3.0.1
   - jpeg=9d
   - kiwisolver=1.3.1
-  - krb5=1.17.1
-  - lcms2=2.11
-  - ld_impl_linux-64=2.35.1
-  - libaec=1.0.4
+  - krb5=1.19.2
+  - lcms2=2.12
+  - ld_impl_linux-64=2.36.1
+  - lerc=2.2.1
+  - libaec=1.0.5
   - libblas=3.9.0
   - libcblas=3.9.0
-  - libcurl=7.71.1
+  - libclang=11.1.0
+  - libcurl=7.78.0
+  - libdeflate=1.7
   - libedit=3.1.20191231
   - libev=4.33
-  - libffi=3.2.1
-  - libgcc-ng=9.3.0
-  - libgfortran-ng=9.3.0
-  - libgfortran5=9.3.0
-  - libglib=2.66.2
-  - libgomp=9.3.0
+  - libevent=2.1.10
+  - libffi=3.3
+  - libgcc-ng=11.1.0
+  - libgfortran-ng=11.1.0
+  - libgfortran5=11.1.0
+  - libglib=2.68.4
+  - libgomp=11.1.0
   - libiconv=1.16
   - liblapack=3.9.0
-  - libnetcdf=4.7.4
-  - libnghttp2=1.41.0
-  - libopenblas=0.3.12
+  - libllvm11=11.1.0
+  - libnetcdf=4.8.0
+  - libnghttp2=1.43.0
+  - libogg=1.3.4
+  - libopenblas=0.3.17
+  - libopus=1.3.1
   - libpng=1.6.37
-  - libssh2=1.9.0
-  - libstdcxx-ng=9.3.0
-  - libtiff=4.1.0
+  - libpq=13.3
+  - libssh2=1.10.0
+  - libstdcxx-ng=11.2.0
+  - libtiff=4.3.0
   - libuuid=2.32.1
-  - libwebp-base=1.1.0
+  - libvorbis=1.3.7
+  - libwebp-base=1.2.1
   - libxcb=1.13
-  - libxml2=2.9.10
-  - lz4-c=1.9.2
-  - matplotlib=3.3.3
-  - matplotlib-base=3.3.3
-  - more-itertools=8.6.0
+  - libxkbcommon=1.0.3
+  - libxml2=2.9.12
+  - libzip=1.8.0
+  - locket=0.2.0
+  - lz4-c=1.9.3
+  - markupsafe=2.0.1
+  - matplotlib=3.3.4
+  - matplotlib-base=3.3.4
+  - more-itertools=8.10.0
+  - msgpack-python=1.0.2
+  - mysql-common=8.0.25
+  - mysql-libs=8.0.25
   - ncurses=6.2
-  - numpy=1.19.4
+  - nspr=4.30
+  - nss=3.69
+  - numpy=1.19.5
   - olefile=0.46
-  - openssl=1.1.1h
+  - openjpeg=2.4.0
+  - openssl=1.1.1l
   - owslib=0.20.0
-  - packaging=20.4
-  - pandas=1.1.4
-  - pcre=8.44
-  - pillow=8.0.1
-  - pip=20.2.4
+  - packaging=21.0
+  - pandas=1.1.5
+  - partd=1.2.0
+  - pcre=8.45
+  - pillow=8.3.2
+  - pip=21.2.4
   - pluggy=0.13.1
-  - proj=6.2.1
+  - proj=7.2.0
+  - psutil=5.8.0
   - pthread-stubs=0.4
-  - py=1.9.0
+  - py=1.10.0
   - pycparser=2.20
   - pyepsg=0.4.0
-  - pygrib=2.0.5
+  - pygrib=2.1.4
   - pykdtree=1.3.4
-  - pyopenssl=19.1.0
+  - pyopenssl=20.0.1
   - pyparsing=2.4.7
-  - pyproj=2.6.1.post1
-  - pyqt=5.9.2
-  - pyresample=1.17.0
-  - pyshp=2.1.2
+  - pyproj=3.0.1
+  - pyqt=5.12.3
+  - pyqt-impl=5.12.3
+  - pyqt5-sip=4.19.18
+  - pyqtchart=5.12
+  - pyqtwebengine=5.12.1
+  - pyresample=1.21.1
+  - pyshp=2.1.3
   - pysocks=1.7.1
   - pytest=5.4.3
-  - python=3.6.11
-  - python-dateutil=2.8.1
+  - python=3.6.13
+  - python-dateutil=2.8.2
   - python_abi=3.6
-  - pytz=2020.4
-  - pyyaml=5.3.1
-  - qt=5.9.7
-  - readline=8.0
-  - requests=2.25.0
+  - pytz=2021.1
+  - pyyaml=5.4.1
+  - qt=5.12.9
+  - readline=8.1
   - scipy=1.5.3
-  - setuptools=49.6.0
+  - setuptools=58.0.4
+  - shapely=1.7.1
   - sip=4.19.8
-  - six=1.15.0
-  - sqlite=3.33.0
-  - sqlparse=0.4.1
-  - tk=8.6.10
+  - six=1.16.0
+  - sortedcontainers=2.4.0
+  - sqlite=3.36.0
+  - sqlparse=0.4.2
+  - tblib=1.7.0
+  - tk=8.6.11
+  - toolz=0.11.1
   - tornado=6.1
-  - urllib3=1.25.11
+  - typing-extensions=3.10.0.0
+  - typing_extensions=3.10.0.0
   - wcwidth=0.2.5
-  - wheel=0.35.1
-  - xarray=0.16.1
+  - wheel=0.37.0
+  - xarray=0.18.2
   - xorg-libxau=1.0.9
   - xorg-libxdmcp=1.1.3
   - xz=5.2.5
   - yaml=0.2.5
-  - zipp=3.4.0
+  - zict=2.0.0
+  - zipp=3.5.0
   - zlib=1.2.11
-  - zstd=1.4.5
-  - dask
+  - zstd=1.5.0
   - pip:
     - amqp==2.6.1
-    - ascat==1.1.2
+    - ascat==2.0.1
+    - asciitree==0.3.3
     - billiard==3.5.0.5
     - c3s-sm==0.1.2
     - cached-property==1.5.2
     - cadati==0.0.2
-    - cdsapi==0.3.1
+    - cdsapi==0.5.1
     - celery==4.1.1
-    - cftime==1.3.0
-    - colorcet==2.0.2
-    - configparser==5.0.1
+    - cftime==1.5.0
+    - charset-normalizer==2.0.6
+    - colorcet==2.0.6
+    - configparser==5.0.2
     - coreapi==2.3.3
     - coreschema==0.0.4
-    - coverage==5.3
+    - coverage==5.5
     - datedown==0.3
-    - django-countries==6.1.3
+    - django-countries==7.2.1
     - django-widget-tweaks==1.4.8
-    - djangorestframework==3.12.2
+    - djangorestframework==3.12.4
     - drf-yasg==1.20.0
     - ease-grid==0.2
-    - ecmwf-api-client==1.6.0
+    - ecmwf-api-client==1.6.1
     - ecmwf-models==0.7
     - esa-cci-sm==0.1.1
     - gldas==0.6.1
+    - h5netcdf==0.11.0
     - h5py==3.1.0
+    - idna==3.2
     - inflection==0.5.1
-    - ismn==1.0.1
+    - ismn==1.1.0
     - itypes==1.2.0
     - jinja2==3.0.1
     - kombu==4.6.11
-    - llvmlite==0.34.0
-    - lxml==4.6.1
+    - llvmlite==0.36.0
+    - lxml==4.6.3
     - markupsafe==2.0.1
-    - netcdf4==1.5.4
-    - numba==0.51.2
-    - param==1.10.0
-    - parse==1.18.0
-    - psycopg2-binary==2.8.6
+    - netcdf4==1.5.7
+    - numba==0.53.1
+    - numcodecs==0.9.1
+    - param==1.11.1
+    - parse==1.19.0
+    - psycopg2-binary==2.9.1
     - pyct==0.4.8
     - pygeobase==0.4.0
     - pygeogrids==0.4.1
     - pynetcf==0.2.2
     - pytesmo==0.12.0
-    - pytest-cov==2.10.1
-    - pytest-django==4.1.0
-    - pytest-mpl==0.12
-    - qa4sm-reader==0.4.4.3
+    - pytest-cov==2.12.1
+    - pytest-django==4.4.0
+    - pytest-mpl==0.13
+    - qa4sm-preprocessing==0.0.1
+    - qa4sm-reader==0.5
     - redis==3.5.3
     - repurpose==0.8
-    - ruamel-yaml==0.17.10
+    - requests==2.26.0
+    - ruamel-yaml==0.17.16
     - ruamel-yaml-clib==0.2.6
-    - seaborn==0.11.0
+    - seaborn==0.11.2
     - shapely==1.7.1
     - smap-io==0.4
     - smecv-grid==0.3
     - smos==0.2
-    - tqdm==4.52.0
+    - toml==0.10.2
+    - tqdm==4.62.2
     - trollsift==0.2.1
     - uritemplate==3.0.1
+    - urllib3==1.26.6
     - vine==1.3.0
     - qa4sm-preprocessing==0.0.1
