--- a/environment/qa4sm_env.yml
+++ b/environment/qa4sm_env.yml
@@ -180,7 +180,9 @@ dependencies:
     - drf-yasg==1.20.0
     - ease-grid==0.2
     - ecmwf-api-client==1.6.1
+    - ecmwf-models==0.7
     - esa-cci-sm==0.1.1
+    - gldas==0.6.1
     - h5netcdf==0.11.0
     - h5py==3.4.0
     - idna==3.2
