--- a/docker/compose/prod/docker-compose.yml
+++ b/docker/compose/prod/docker-compose.yml
@@ -6,10 +6,10 @@ services:
       POSTGRES_PASSWORD: "${POSTGRES_PASSWORD}"
     volumes:
       - type: bind
-        source: /var/qa4sm-prod/db/log
+        source: "${WORKSPACE}db/log"
         target: /var/log
       - type: bind
-        source: /var/qa4sm-prod/db/data
+        source: "${WORKSPACE}db/data"
         target: /var/lib/postgresql/data
         
   qa4sm-redis:
@@ -30,20 +30,34 @@ services:
 
     volumes:
       - type: bind
-        source: /var/qa4sm-prod/webapp/log
+        source: "${WORKSPACE}webapp/log"
         target: /var/log
       - type: bind
-        source: /var/qa4sm-prod/webapp/output
+        source: "${WORKSPACE}webapp/output"
         target: /data/qa4sm/output
       - type: bind
-        source: /var/qa4sm-prod/webapp/settings/settings_conf.py
+        source: "${WORKSPACE}webapp/settings/settings_conf.py"
         target: /var/lib/qa4sm-web-val/valentina/valentina/settings_conf.py
       - type: bind
-        source: /var/
+        source: "${DATA_FOLDER}"
         target: /var/lib/qa4sm-web-val/valentina/data
 
   proxy:
     image: qa4sm-proxy:latest
     ports:
       - "8080:80"
-        
+  worker-1:
+    image: "awst/qa4sm-worker:latest"
+    environment:
+      QA4SM_DB_HOST: "${QA4SM_DB_HOST}"
+      QA4SM_CELERY_WORKERS: "${QA4SM_WORKER_THREAD_PER_NODE}"
+    volumes:
+      - type: bind
+        source: "${WORKSPACE}celery-w1/log"
+        target: /var/log
+      - type: bind
+        source: ${WORKSPACE}webapp/settings/settings_conf.py
+        target: /var/lib/qa4sm-web-val/valentina/valentina/settings_conf.py
+      - type: bind
+        source: "${DATA_FOLDER}"
+        target: /var/lib/qa4sm-web-val/valentina/data
