--- a/docker/compose/prod/docker-compose.yml
+++ b/docker/compose/prod/docker-compose.yml
@@ -19,7 +19,7 @@ services:
     image: "rabbitmq"
 
   web:
-    image: "awst/qa4sm:latest"
+    image: "awst/qa4sm:<VERSION>"
     environment:
       POSTGRES_PASSWORD: "${POSTGRES_PASSWORD}"
       PGPASSWORD: "${POSTGRES_PASSWORD}"
@@ -43,11 +43,11 @@ services:
         target: /var/lib/qa4sm-web-val/valentina/data
 
   proxy:
-    image: qa4sm-proxy:latest
+    image: "qa4sm-proxy:<VERSION>"
     ports:
       - "8080:80"
   worker-1:
-    image: "awst/qa4sm-worker:latest"
+    image: "awst/qa4sm-worker:<VERSION>"
     environment:
       QA4SM_DB_HOST: "${QA4SM_DB_HOST}"
       QA4SM_CELERY_WORKERS: "${QA4SM_WORKER_THREAD_PER_NODE}"
