--- a/docker/compose/test/docker-compose.yml
+++ b/docker/compose/test/docker-compose.yml
@@ -19,7 +19,7 @@ services:
     image: "rabbitmq"
 
   web:
-    image: "awst/qa4sm:latest-test"
+    image: "awst/qa4sm:latest"
     environment:
       POSTGRES_PASSWORD: "${POSTGRES_PASSWORD}"
       PGPASSWORD: "${POSTGRES_PASSWORD}"
@@ -43,11 +43,11 @@ services:
         target: /var/lib/qa4sm-web-val/valentina/data
 
   proxy:
-    image: "awst/qa4sm-proxy:latest-test"
+    image: "awst/qa4sm-proxy:latest"
     ports:
       - "8081:80"
   worker-1:
-    image: "awst/qa4sm-worker:latest-test"
+    image: "awst/qa4sm-worker:latest"
     environment:
       QA4SM_DB_HOST: "${QA4SM_DB_HOST}"
       QA4SM_CELERY_WORKERS: "${QA4SM_WORKER_THREAD_PER_NODE}"
