--- a/docker/compose/test/docker-compose.yml
+++ b/docker/compose/test/docker-compose.yml
@@ -19,7 +19,7 @@ services:
     image: "rabbitmq"
 
   web:
-    image: "awst/qa4sm:latest-test"
+    image: "awst/qa4sm:latest"
     environment:
       POSTGRES_PASSWORD: "${POSTGRES_PASSWORD}"
       PGPASSWORD: "${POSTGRES_PASSWORD}"
@@ -39,15 +39,15 @@ services:
         source: "${QA4SM_WORKSPACE}webapp/settings/settings_conf.py"
         target: /var/lib/qa4sm-web-val/valentina/valentina/settings_conf.py
       - type: bind
-        source: "${DATA_FOLDER}"
+        source: "${QA4SM_DATA_FOLDER}"
         target: /var/lib/qa4sm-web-val/valentina/data
 
   proxy:
-    image: "awst/qa4sm-proxy:latest-test"
+    image: "awst/qa4sm-proxy:latest"
     ports:
       - "8081:80"
   worker-1:
-    image: "awst/qa4sm-worker:latest-test"
+    image: "awst/qa4sm-worker:latest"
     environment:
       QA4SM_DB_HOST: "${QA4SM_DB_HOST}"
       QA4SM_CELERY_WORKERS: "${QA4SM_WORKER_THREAD_PER_NODE}"
@@ -59,5 +59,5 @@ services:
         source: ${QA4SM_WORKSPACE}webapp/settings/settings_conf.py
         target: /var/lib/qa4sm-web-val/valentina/valentina/settings_conf.py
       - type: bind
-        source: "${DATA_FOLDER}"
+        source: "${QA4SM_DATA_FOLDER}"
         target: /var/lib/qa4sm-web-val/valentina/data
