--- a/docker/compose/prod/docker-compose.yml
+++ b/docker/compose/prod/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.9"
 services:      
   qa4sm-db:
-    image: "postgres"
+    image: "postgres:10"
     environment:
       POSTGRES_PASSWORD: "${POSTGRES_PASSWORD}"
     volumes:
