--- a/docker/compose/prod/docker-compose.yml
+++ b/docker/compose/prod/docker-compose.yml
@@ -19,7 +19,7 @@ services:
     image: "rabbitmq"
 
   web:
-    image: "awst/qa4sm:<VERSION>"
+    image: "awst/qa4sm:1.6.2"
     environment:
       POSTGRES_PASSWORD: "${POSTGRES_PASSWORD}"
       PGPASSWORD: "${POSTGRES_PASSWORD}"
@@ -34,20 +34,20 @@ services:
         target: /var/log
       - type: bind
         source: "${QA4SM_WORKSPACE}webapp/output"
-        target: /data/qa4sm/output
+        target: /var/lib/qa4sm-web-val/valentina/output
       - type: bind
         source: "${QA4SM_WORKSPACE}webapp/settings/settings_conf.py"
         target: /var/lib/qa4sm-web-val/valentina/valentina/settings_conf.py
       - type: bind
-        source: "${DATA_FOLDER}"
+        source: "${QA4SM_DATA_FOLDER}"
         target: /var/lib/qa4sm-web-val/valentina/data
 
   proxy:
-    image: "qa4sm-proxy:<VERSION>"
+    image: "awst/qa4sm-proxy:1.6.2"
     ports:
       - "8080:80"
   worker-1:
-    image: "awst/qa4sm-worker:<VERSION>"
+    image: "awst/qa4sm-worker:1.6.2"
     environment:
       QA4SM_DB_HOST: "${QA4SM_DB_HOST}"
       QA4SM_CELERY_WORKERS: "${QA4SM_WORKER_THREAD_PER_NODE}"
@@ -59,5 +59,5 @@ services:
         source: ${QA4SM_WORKSPACE}webapp/settings/settings_conf.py
         target: /var/lib/qa4sm-web-val/valentina/valentina/settings_conf.py
       - type: bind
-        source: "${DATA_FOLDER}"
+        source: "${QA4SM_DATA_FOLDER}"
         target: /var/lib/qa4sm-web-val/valentina/data
