--- a/environment/qa4sm_env.yml
+++ b/environment/qa4sm_env.yml
@@ -140,6 +140,7 @@ dependencies:
   - readline=8.1
   - scipy=1.7.2
   - setuptools=59.1.1
+  - shapely=1.8.0
   - six=1.16.0
   - sortedcontainers=2.4.0
   - sqlite=3.36.0
@@ -225,7 +226,7 @@ dependencies:
     - ruamel-yaml==0.17.16
     - ruamel-yaml-clib==0.2.6
     - seaborn==0.11.2
-    - shapely==1.8.0
+    - shapely==1.7.1
     - smap-io==0.4
     - smecv-grid==0.2.1
     - smos==0.2
