--- a/environment/qa4sm_env.yml
+++ b/environment/qa4sm_env.yml
@@ -107,7 +107,6 @@ dependencies:
   - olefile=0.46
   - openjpeg=2.4.0
   - openssl=1.1.1l
-  - owslib=0.20.0
   - packaging=21.0
   - pandas=1.3.4
   - partd=1.2.0
@@ -175,7 +174,6 @@ dependencies:
     - asciitree==0.3.3
     - billiard==3.6.4.0
     - c3s-sm==0.1.2
-    - cached-property==1.5.2
     - cadati==0.0.2
     - cdsapi==0.5.1
     - celery==5.2.0
@@ -191,10 +189,14 @@ dependencies:
     - deprecated==1.2.13
     - django-countries==7.2.1
     - django-widget-tweaks==1.4.9
+    - djangorestframework==3.12.4
+    - drf-yasg==1.20.0
     - ease-grid==0.2
     - ecmwf-api-client==1.6.1
     - ecmwf-models==0.7
     - esa-cci-sm==0.1.1
+    - gldas==0.6.1
+    - h5netcdf==0.11.0
     - fasteners==0.16.3
     - h5py==3.5.0
     - idna==3.3
@@ -223,10 +225,8 @@ dependencies:
     - redis==4.0.0
     - repurpose==0.8
     - requests==2.26.0
-    - ruamel-yaml==0.17.16
-    - ruamel-yaml-clib==0.2.6
+    - ruamel-yaml==0.17.17
     - seaborn==0.11.2
-    - shapely==1.7.1
     - smap-io==0.4
     - smecv-grid==0.2.1
     - smos==0.2
